2007-03-27  Casey Marshall  <csm@gnu.org>

	PR classpath/31302:
	* gnu/javax/net/ssl/provider/SSLSocketImpl.java (SSLSocketImpl):
	Always make a new socket.
	(bind, connect, getInetAddress, getLocalAddress, getPort,
	getLocalPort, getRemoteSocketAddress, getLocalSocketAddress,
	setTcpNoDelay, getTcpNoDelay, setSoLinger, getSoLinger,
	setOOBInline, getOOBInline, setSoTimeout, getSoTimeout,
	setSendBufferSize, getSendBufferSize, setReceiveBufferSize,
	getReceiveBufferSize, setKeepAlive, getKeepAlive, setTrafficClass,
	getTrafficClass, setReuseAddress, getReuseAddress, close,
	shutdownInput, shutdownOutput, isConnected, isBound, isClosed,
	isInputShutdown, isOutputShutdown): Always use
	'underlyingSocket'.

2007-03-27  Tom Tromey  <tromey@redhat.com>

	PR classpath/31303:
	* external/sax/org/xml/sax/helpers/XMLReaderFactory.java
	(createXMLReader): Code in Classpath default.

2007-03-26  Tom Tromey  <tromey@redhat.com>

	* doc/cp-tools.texinfo (gcjh Tool): Added more text.
	(rmid Tool): Likewise.

2007-03-25  Dalibor Topic  <robilad@kaffe.org>

	* doc/cp-tools.texinfo: Fix node ordering.

2007-03-19  Matthias Klose  <doko@ubuntu.com>

	* doc/Makefile.am: Build a gcjh(1) man page.
	* doc/cp-tools.texinfo: Add documentation for gcjh.

2007-03-26  Stepan Kasal  <skasal@redhat.com>

	* tools/gnu/classpath/tools/javah/Main.java (cniOrJniSeen): New
	field.
	(getParser): Use new field.

2007-03-17  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* resource/com/sun/tools/javac/messages.properties
	(Main.FailedToRead, Main.MalformedURL, Main.FailedToLoad): Clarify
	messages for when --with-ecj-jar is not specified.
	* configure.ac (FOUND_ECJ_JAR): Remove conditional.
	* tools/Makefile.am: Build com.sun.tools.javac package
	unconditionally.
	* configure, doc/api/Makefile.in, doc/Makefile.in,
	examples/Makefile.in, external/jsr166/Makefile.in,
	external/Makefile.in, external/relaxngDatatype/Makefile.in,
	external/sax/Makefile.in, external/w3c_dom/Makefile.in,